test/fail/malformed_control.zn
# Test: Malformed control structures (expect 1 error)
# ERRORS: 1

func main() {
    if x > 0
        var y = 1
    return 0
}
